# agent-wallet

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  Dockerfile  Dockerfile.gateway  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  alembic.ini  docker-compose.liquid.yml  docker-compose.tor-split.yml  docker-compose.yml  pyproject.toml  start.sh  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: base-image.yml  ci.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_dashboard_sentinel_key.py  003_security_hardening.py  004_reencrypt_fields.py  005_api_key_soft_delete.py  006_recompute_audit_hashes.py  007_api_key_prev_hash.py  008_audit_retention_chain_repair.py  009_bolt12_tables.py  010_bolt12_offer_provenance.py  011_bolt12_offerless_invreq.py  012_bolt12_default_receive.py  013_bolt12_invreq_metadata_dedup.py  014_bolt12_payment_hash_unique.py  015_utxo_labels.py  016_anonymize.py  017_anonymize_feature_enabled_at_quantize.py  018_anonymize_decoy_seed.py  019_anonymize_k_decrement_counter.py  020a_anonymize_runtime_state_add_enc_column.py  020b_anonymize_runtime_state_finalize.py  021_anonymize_stepup_state.py  022_anonymize_session_claim_tx_columns.py  023_anonymize_quote_token_key_generations.py  024_anonymize_bin_set_history_seed.py  025_anonymize_distinct_operator_ids_check.py  026_anonymize_liquid_blinding_seed.py  027_anonymize_session_output.py  028_audit_logs_api_key_id_nullable.py  029_braiins_deposit.py  030_braiins_deposit_phase2.py  031_braiins_deposit_phase3.py  032_braiins_deposit_dust_prevention.py  033_braiins_deposit_include_extras.py  034_boltz_swap_claim_pubkey.py  035_anonymize_liquid_operator_ids.py  036_liquid_residual_outputs.py  037_boltz_swap_broadcast_timestamps.py  038_boltz_swap_lockup_txid.py  039_bolt12_issuer_id_unique_active.py  (+12 more)
app/: __init__.py  main.py
app/api/: __init__.py  admin.py  bolt12.py  channel_mix.py  channels.py  cold_storage.py  livez.py  mempool.py  payments.py  peer_catalog.py  sign.py  tor_metrics.py  wallet.py
app/core/: __init__.py  bech32_lnurl.py  bolt11.py  concurrency.py  config.py  database.py  encryption.py  http_limits.py  idempotency.py  limiter.py  net_guard.py  rate_limit.py  resilience.py  security.py  sign_formats.py  sign_validation.py  tls.py  utils.py  validation.py
app/dashboard/: __init__.py  api.py  auth.py  routes.py
app/models/: __init__.py  anonymize_session.py  api_key.py  audit_chain_state.py  audit_log.py  bolt12_invoice.py  bolt12_offer.py  boltz_swap.py  braiins_deposit_session.py  channel_mix_run.py  dashboard_setting.py  utxo_label.py
app/services/: __init__.py  alert_service.py  api_key_service.py  audit_service.py  boltz_lockup_verify.py  boltz_recovery.py  boltz_service.py  braiins_channel_peers.py  braiins_deposit_service.py  channel_mix_plan_token.py  channel_mix_planner.py  dust_safe_send.py  health.py  lnd_channel_flap_detector.py  lnd_channel_uptime.py  lnd_hs_descriptor_age.py  lnd_hs_descriptor_check.py  lnd_keepalive.py  lnd_service.py  lnd_tor_supervisor.py  lnd_types.py  lnurl_service.py  mempool_fee_service.py  onboarding_recommender.py  small_channel_peers.json  small_channel_peers.py  tor_diversity_smoke.py  tor_dns_leak_check.py  tor_event_stream.py  tor_inflight.py  tor_per_listener_probe.py  tor_prewarm.py  tor_proxy_reach_check.py  tor_watchdog.py  utxo_service.py  utxo_subscriptions.py
app/tasks/: __init__.py  boltz_tasks.py  braiins_deposit_tasks.py  channel_mix_tasks.py  liquid_residual_scan.py  observability.py
bolt12-gateway/: Cargo.toml  build.rs  config.example.toml
bolt12-gateway/certs/: .gitignore  README.md
bolt12-gateway/src/: address_cache.rs  config.rs  ldk_glue.rs  lib.rs  lock_recover.rs  main.rs  proto.rs  runner.rs  service.rs  sticky_peers.rs
bolt12-gateway/tests/: transport.rs
docs/: README.md  anonymize.md  anonymize_operator_diversity.md  anonymize_troubleshooting.md  api-keys.md  bolt12.md  boltz.md  boltz_recovery.md  braiins_deposit.md  electrs.md  lnurl.md  operator_tor_runbook.md  secret_key_backup.md  small-channel-peers.md
liquid-overlay/: Dockerfile.electrs-liquid  elementsd.conf  memprobe.sh
liquid-overlay/patches/: 0001-slim-headers.patch
proto/: bolt12_gateway.proto
scripts/: boltz_claim.js  boltz_claim_liquid.js  boltz_lock_liquid.js  boltz_verify_lockup_address.js  boltz_verify_lockup_address_liquid.js  compute_sri.sh  diagnose_braiins_submarine.py  gen_bolt12_certs.sh  generate_bolt12_proto.sh  package.json  recover_braiins_submarine.py  regtest_offerless_invreq_smoke.py  rotate_bolt12_token.sh  sign_clock_skew_sources.sh  sign_operator_registry.sh  submarine_refund.js  submarine_refund_liquid.js
scripts/peer_probe/: README.md  probe.py  recon.py  sync_to_catalog.py
tests/: __init__.py  _bolt11_fixtures.py  _fake_boltz.py  _fake_lnd.py  conftest.py  helpers.py
tests/integration/: __init__.py  test_admin_errors.py  test_anonymize_reverse_mpp_decoy_decrement_distribution.py  test_bolt12_api.py  test_bolt12_responder.py  test_boltz_swap_lifecycle.py  test_braiins_deposit_lifecycle.py  test_channel_mix_endpoints.py  test_cold_storage_errors.py  test_dashboard.py  test_dashboard_anonymize_flicker.py  test_dashboard_api_keys.py  test_dashboard_audit_log.py  test_dashboard_bolt12.py  test_dashboard_braiins_deposit.py  test_dashboard_channel_card_catalog.py  test_dashboard_cold_storage_flicker.py  test_dashboard_error_paths.py  test_dashboard_inbound_liquidity.py  test_dashboard_onboarding.py  test_dashboard_tor_status.py  test_endpoints.py  test_lnd_tor_supervisor_false_positives.py  test_lnd_tor_supervisor_recovery.py  test_lnurl_endpoints.py  test_peer_catalog.py  (+4 more)
tools/: check_anonymize_test_robustness.py  check_no_unconditional_skips.py
tor-proxy/: Dockerfile  entrypoint.sh  operator.conf  torrc  torrc.anonymize  torrc.lnd
(+522 files in other folders)
