[workspace]
members = ["bolt12-gateway"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85"
authors = ["agent-wallet contributors"]
license = "MIT"
repository = "https://github.com/paulscode/agent-wallet"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Pedantic-but-noisy lints we don't want to fight in scaffolding.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

# Release profile mirrors what we'll ship: optimised, slim binary.
# Panics unwind rather than abort so tonic's per-request catch_unwind
# isolates a panicking RPC handler to that one request instead of
# taking down the whole daemon (and every other in-flight operation
# and peer connection) with it.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "unwind"
