[package]
name = "bolt12-gateway"
version = "0.1.0"
description = "BOLT 12 onion-message gateway daemon — pairs with agent-wallet."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# LDK — bare crates only. We deliberately avoid `ldk-node` because it
# insists on owning preimages and constructing its own blinded paths,
# which is incompatible with the split where LND owns settlement.
lightning = { version = "0.2", default-features = false, features = ["std"] }
lightning-net-tokio = "0.2"
lightning-invoice = { version = "0.34", default-features = false, features = ["std"] }
bitcoin = { version = "0.32", default-features = false, features = ["std"] }

# gRPC.
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"

# Async runtime.
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
# SOCKS5 client for routing peer dials through the shared
# ``tor-proxy`` service. lightning-net-tokio's ``connect_outbound``
# only does plain TCP; we wrap a SOCKS5-tunnelled stream and feed
# it into ``setup_outbound`` when ``socks5_proxy`` is configured.
# Required for split-host deploys and the ``internal: true`` docker
# network — both deny direct internet egress from the gateway.
tokio-socks = "0.5"
async-stream = "0.3"
futures = "0.3"

# Crypto / encoding helpers.
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
hex = "0.4"
rand = "0.10"
subtle = "2"

# Diagnostics.
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config.
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost", "transport"] }

[dev-dependencies]
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
# ``test-util`` enables ``#[tokio::test(start_paused = true)]`` so the
# heartbeat-ticker test can drive the 30 s interval without real waits.
tokio = { version = "1", features = ["test-util"] }

[lib]
name = "bolt12_gateway"
path = "src/lib.rs"

[[bin]]
name = "bolt12-gateway"
path = "src/main.rs"
